Upgrade to 0.4.0, switch to jitpack, add Still D.R.E.

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -2,6 +2,6 @@ configuration:
   track:
     bpm: 95
   locations:
-    liveFile: src/main/kotlin/live.kts
+    liveFile: src/main/kotlin/still.kts
     samples: work/samples
     loops: work/loops
